--- a/app/locales/nl/intro.json
+++ b/app/locales/nl/intro.json
@@ -1,5 +1,5 @@
 {
-    "private_kit":"Private Kit",
+    "private_kit":"Risk Indicator",
     "intro1_para1":"Ontworpen met gegevensbeveiliging en privacybescherming als basis. MIT Private Kit is de volgende generatie van veilige locatietracking.",
     "next":"VOLGENDE",
     "back":"TERUG",
