--- a/app/locales/pt/intro.json
+++ b/app/locales/pt/intro.json
@@ -1,5 +1,5 @@
 {
-    "private_kit":"Private Kit",
+    "private_kit":"Risk Indicator",
     "intro1_para1":"Projetado com segurança de dados e proteção de privacidade, o MIT Private Kit é a próxima geração segura para históricos de localização.",
     "next":"PRÓXIMO",
     "back":"VOLTAR",
