--- a/app/locales/en/intro.json
+++ b/app/locales/en/intro.json
@@ -1,5 +1,5 @@
 {
-    "private_kit":"Private Kit",
+    "private_kit":"Risk Indicator",
     "intro1_para1":"Designed with data security and privacy protection at its heart, MIT Private Kit is the next generation of secure location logging.",
     "next":"NEXT",
     "back":"BACK",
