--- a/app/locales/it/intro.json
+++ b/app/locales/it/intro.json
@@ -1,5 +1,5 @@
 {
-    "private_kit":"Private Kit",
+    "private_kit":"Risk Indicator",
     "intro1_para1":"Progettato tenendo a cuore la sicurezza dei dati e della privacy, MIT Private Kit è la nuova generazione di registrazione privata della localizzazione.",
     "next":"PROSSIMO",
     "back":"INDIETRO",
