--- a/app/locales/nl/intro.json
+++ b/app/locales/nl/intro.json
@@ -5,7 +5,7 @@
     "back":"TERUG",
     "start":"START",
     "intro2_title1":"Minder dan 100KB",
-    "intro2_para1":"Private Kit gebruikt minder dan 100KB om je locatiehistorie op te slaan – minder dan de ruimte van één foto dus.",
+    "intro2_para1":"Community Risk Indicator gebruikt minder dan 100KB om je locatiehistorie op te slaan – minder dan de ruimte van één foto dus.",
     "intro2_title2":"Jij houdt de controle",
     "intro2_para2":"Data verlaat nooit je telefoon zonder jouw expliciete toestemming.",
     "intro3_title1":"De toekomst",
